# truss

./: .gitignore  pyproject.toml
tests/: .ignore  3.7 Practice Problems _ Learn About Structures.html  ex_a.json  invalid.json  out_of_range.json  test_examples.py
tests/3.7 Practice Problems _ Learn About Structures_files/: css_BASU_OnwyNgeAsDrjWxpLhJ6RgEmN9Nonhno-FVMYQw.css  css_UGQcChsWTUkQNsE5IMwlsvqwAz7C8GGwJlxiWwLhq5E.css  css_fn0DRLyE1Wl2OBn3CVfCD7T1O5-Ok8L1yN_R6C9kGK4.css  f.txt  js_VLcLq3Cv6tUPggRGP9m8Iq1kf-AgnBOrSt6tdX8bWQM.js.download  js_cIcLeFNTJw0ID6urdYUpo4RvlKwyLjjLegnnPI-kA8I.js.download  js_h2t1LGGxBqKLzjUiRCrqShJEJiyqDfi0WEOwKFUKSso.js.download
truss/: __init__.py  graphics.py  json.py  main.py  math.py  repl.py  schema.json
truss/types/: __init__.py  truss.py
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx  Canvas.tsx
