tool.uv.package = true

[project]
name = "truss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.23.0",
    "numpy>=2.2.2",
    "pytest>=8.3.4",
    "typer>=0.15.1",
]

[project.scripts]
truss = "truss.main:entry"
